tests/elab/fail/let.t20
;; Parallel let binding.

(: test (*))
(define test
  (let ([x 40]
        [y (+ x 2)])
    (,)))
